--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+
+    compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '9.1.0'
 }
 
 test {
