--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -17,3 +17,7 @@ login.forgot_password=Forgot password?
 login.login=Login
 login.required=This field is required
 login.error=Invalid login or password
+error.page_not_found_title=Page not found
+error.page_not_found_detail=we are sorry, but the page you requested was not found
+error.internal_error_title=Something went wrong
+error.internal_error_detail=A server-side error occurred
