--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <display-name>BSUIRHub</display-name>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/pages/errors/500.jsp</location>
+    </error-page>
 </web-app>
