--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
 
+    implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.9.Final'
     compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '9.1.0'
     implementation group: 'jstl', name: 'jstl', version: '1.2'
 }
