--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.0.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
 
     implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.9.Final'
     compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '9.1.0'
