--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -11,12 +11,17 @@ header.profile=Profile
 header.settings=Settings
 header.logout=Logout
 header.login=Login
+
 login.login_placeholder=Login
 login.password_placeholder=Password
 login.forgot_password=Forgot password?
 login.login=Login
 login.required=This field is required
 login.error=Invalid login or password
+
+mail.subject=BSUIRHUB | Email confirmation
+mail.message=Hello! Follow this link to confirm your email: 
+
 error.page_not_found_title=Page not found
 error.page_not_found_detail=we are sorry, but the page you requested was not found
 error.internal_error_title=Something went wrong
