--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,9 @@
         <error-code>500</error-code>
         <location>/WEB-INF/pages/common/errors/500.jsp</location>
     </error-page>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/pages/common/errors/500.jsp</location>
+    </error-page>
 </web-app>
