--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -4,4 +4,4 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 
 username=archbucket.index@gmail.com
-password=DiMa75097110
+password=DiMa75097110q
