--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -22,6 +22,9 @@ login.error=Invalid login or password
 mail.subject=BSUIRHUB | Email confirmation
 mail.message=Hello! Follow this link to confirm your email: 
 
+password_reset.subject=BSUIRHUB | Password reset
+password_reset.message=Hello! Follow this link to reset your password: 
+
 error.page_not_found_title=Page not found
 error.page_not_found_detail=we are sorry, but the page you requested was not found
 error.internal_error_title=Something went wrong
