--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '2.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
@@ -27,6 +28,12 @@ dependencies {
     implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.9.Final'
     compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '9.1.0'
     implementation group: 'jstl', name: 'jstl', version: '1.2'
+}
+
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 test {
