--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -70,4 +70,8 @@
         <error-code>404</error-code>
         <location>/WEB-INF/pages/common/errors/500.jsp</location>
     </error-page>
+
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
