contact us page

--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -19,8 +19,8 @@ login.login=Login
 login.required=This field is required
 login.error=Invalid login or password
 
-mail.subject=BSUIRHUB | Email confirmation
-mail.message=Hello! Follow this link to confirm your email: 
+confirmation_mail.subject=BSUIRHUB | Email confirmation
+confirmation_mail.message=Hello! Follow this link to confirm your email:
 
 password_reset.subject=BSUIRHUB | Password reset
 password_reset.message=Hello! Follow this link to reset your password: 
