reworked comments, added notifications by email

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -5,5 +5,17 @@ mail.smtp.port=587
 
 username=archbucket.index@gmail.com
 password=DiMa75097110q
-
+threadPoolSize=2
 support=dzmitriy20magic@gmail.com
+
+confirmation_mail.subject=BSUIRHUB | Email confirmation
+confirmation_mail.body=Hello! Follow this link to confirm your email: %s
+
+contact_request.subject=BSUIRHUB | Contact request
+contact_request.body=<b>Contact email: </b>%s<br/><b>Message:</b> %s
+
+password_reset.subject=BSUIRHUB | Password reset
+password_reset.message=Hello! Follow this link to reset your password: %s
+
+comment_notification.subject=BSUIRHUB | Comment notification
+comment_notification.body=Hello! A new comment has arrived under one of your grades.<br/>Follow this link to view it: %s
