--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,4 +74,11 @@
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
+
+    <jsp-config>
+        <taglib>
+            <taglib-uri>bsuirhub-tags</taglib-uri>
+            <taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
+        </taglib>
+    </jsp-config>
 </web-app>
