--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,11 @@
     <display-name>BSUIRHub</display-name>
 
     <filter-mapping>
+        <filter-name>CookiesFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
         <filter-name>UserRoleFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
