--- a/src/main/resources/jwt.properties
+++ b/src/main/resources/jwt.properties
@@ -1,2 +1,2 @@
-secretKey=9ZnPc8HZe7o2yn7FBuQ8YLLwiiKz290XGkzJODSw
-validityTime=72
+secret_key=9ZnPc8HZe7o2yn7FBuQ8YLLwiiKz290XGkzJODSw
+validity_time=72
