--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,23 +1,145 @@
+index.home=Home
+index.welcome=Welcome to BSUIR study control system
+index.login_proposal=Login to continue
+
+lang.russian=Russian
+lang.english=English
+
 header.home=Home
-footer.lang=Language
-header.rating=Rating
-header.university=University
-header.teachers=Teachers
-header.subjects=Subjects
-header.faculties=Faculties
-header.departments=Departments
-header.about=About
+header.dashboard=Dashboard
+header.contact_us=Contact us
+header.admin_panel=Admin panel
 header.profile=Profile
 header.settings=Settings
 header.logout=Logout
 header.login=Login
 
+footer.lang=Language
+
+model.validation_error=A server-side validation error occurred
+
+login.login=Login
+login.field_required=This field is required
 login.login_placeholder=Login
 login.password_placeholder=Password
 login.forgot_password=Forgot password?
-login.login=Login
-login.required=This field is required
-login.error=Invalid login or password
+login.login_error=Invalid login or password
+login.password_changed=Password successfully changed
+
+settings.field_required=This field is required
+settings.account_settings=Account settings
+settings.profile_image=Profile image
+settings.accepted=Accepted file type .jpg, .jpeg, .png less than 512KB
+settings.upload=Upload
+settings.email=Email
+settings.confirmed=Confirmed
+settings.not_confirmed=Not confirmed
+settings.change_email=Change email
+settings.current_password=Current password
+settings.new_password=New password
+settings.confirm_password=Confirm password
+settings.change_password=Change password
+settings.confirmation_sent=Confirmation email sent
+settings.not_unique_email=Not unique email
+settings.resend_confirmation=Resend confirmation link
+settings.invalid_current_password=Invalid current password
+settings.password_validation=Password must contain 8 - 32 alphanumeric characters (letters and digits are required both)
+settings.passwords_do_not_match=Passwords do not match
+settings.invalid_email=Invalid email
+settings.password_changed=Password successfully changed
+
+reset.new_password=New password
+reset.confirm_password=Confirm password
+reset.password_validation=Password must contain 8 - 32 alphanumeric characters (letters and digits are required both)
+reset.passwords_do_not_match=Passwords do not match
+reset.email=Email
+reset.reset_password=Reset password
+reset.reset=Reset
+reset.password_reset_sent=Password reset link sent
+reset.send_reset_link=Send reset link
+reset.invalid_email=Invalid email
+
+dashboard.student=Student dashboard
+dashboard,average_grade=Average grade
+dashboard.faculty=Faculty
+dashboard.department=Department
+dashboard.specialty=Specialty
+dashboard.group=Group
+dashboard.headman=Headman
+dashboard.curator=Curator
+dashboard.active_subjects=Active subjects
+dashboard.teacher=Teacher dashboard
+dashboard.your_subjects=Your subjects
+dashboard.groups=Groups
+dashboard.students=Students
+
+grades.grades_overview=Grades overview
+grades.average_subject_grade=Average subject grade
+grades.teacher=Teacher
+grades.date=Date
+grades.grade=Grade
+grades.action=Action
+grades.comments=Comments
+grades.close=Close
+
+contact_us.contact_us=Contact us
+contact_us.message_sent=Message successfully send, we will contact you soon
+contact_us.your_contact_email=Your contact email
+contact_us.message=Message
+contact_us.send_message=Send message
+contact_us.message_validation=Message text must have 1 - 255 characters
+contact_us.invalid_email=Invalid email
+
+admin.users=Users
+admin.faculties=Faculties
+admin.departments=Departments
+admin.subjects=Subjects
+admin.groups=Groups
+admin.delete_attention=Attention, you're trying to delete entity. Are you sure?
+admin.save=Save
+admin.settings=Settings
+admin.logout=Logout
+admin.action=Action
+
+department.name=Name
+department.short_name=Short name
+department.specialty_alias=Specialty
+department.faculty=Faculty
+department.new_department=New department
+department.edit_department=Edit department
+department.department_updated=Department successfully updated
+department.department_name_validation=Department name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+department.department_short_name_validation=Department short name must have 1 - 15 alphabetic characters
+department.department_specialty_validation=Department specialty alias must have 1 - 100 alphabetic and whitespace (except for trailing and leading) characters
+
+faculty.name=Name
+faculty.short_name=Short name
+faculty.new_faculty=New faculty
+faculty.edit_faculty=Edit faculty
+faculty.faculty_updated=Faculty successfully updated
+faculty.faculty_name_validation=Faculty name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+faculty.faculty_short_name_validation=Faculty short name must have 1 - 15 alphabetic characters
+
+group.name=Name
+group.new_group=New group
+group.edit_group=Edit group
+group.group_updated=Group successfully updated
+group.not_unique_name=Not unique name
+group.group_name_validation=Group name must have 1 - 20 alphanumeric characters
+group.subjects_and_teachers=Subjects and teachers
+group.assignments=Assignments
+group.notification=Notification
+group.assignment_created=Assignment successfully created
+group.assignment_updated=Assignment successfully updated
+group.assignment_deleted=Assignment successfully deleted
+
+subject.name=Name
+subject.short_name=Short name
+subject.new_subject=New subject
+subject.edit_subject=Edit subject
+subject.subject_updated=Subject successfully updated
+subject.subject_name_validation=Subject name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+subject.subject_short_name_validation=Subject short name must have 1 - 15 alphabetic characters
 
 error.page_not_found_title=Page not found
 error.page_not_found_detail=we are sorry, but the page you requested was not found
