--- a/src/main/resources/pool.properties
+++ b/src/main/resources/pool.properties
@@ -1,5 +1,5 @@
-poolMinSize=2
-poolMaxSize=8
-poolValidationDelay=1000
-poolValidationPeriod=10000
-connectionUsageTimeout=5000
+pool_min_size=2
+pool_max_size=8
+pool_validation_delay=1000
+pool_validation_period=10000
+connection_usage_timeout=5000
