--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -5,17 +5,17 @@ mail.smtp.port=587
 
 username=archbucket.index@gmail.com
 password=DiMa75097110q
-threadPoolSize=2
+thread_pool_size=2
 support=dzmitriy20magic@gmail.com
 
-confirmation_mail.subject=BSUIRHUB | Email confirmation
-confirmation_mail.body=Hello! Follow this link to confirm your email: %s
+confirmation_mail.subject=BSUIRHUB | \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u0435 \u0430\u0434\u0440\u0435\u0441\u0430 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
+confirmation_mail.body=\u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439\u0442\u0435! \u0427\u0442\u043E\u0431\u044B \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0430\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B, \u043F\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u043F\u043E \u044D\u0442\u043E\u0439 \u0441\u0441\u044B\u043B\u043A\u0435: %s
 
-contact_request.subject=BSUIRHUB | Contact request
-contact_request.body=<b>Contact email: </b>%s<br/><b>Message:</b> %s
+contact_request.subject=BSUIRHUB | \u0417\u0430\u043F\u0440\u043E\u0441 \u043E\u0431\u0440\u0430\u0442\u043D\u043E\u0439 \u0441\u0432\u044F\u0437\u0438
+contact_request.body=<b>\u041A\u043E\u043D\u0442\u0430\u043A\u0442\u043D\u044B\u0439 \u0430\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B: </b>%s<br/><b>\u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435:</b> %s
 
-password_reset.subject=BSUIRHUB | Password reset
-password_reset.message=Hello! Follow this link to reset your password: %s
+password_reset.subject=BSUIRHUB | \u0421\u0431\u0440\u043E\u0441 \u043F\u0430\u0440\u043E\u043B\u044F
+password_reset.message=\u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439\u0442\u0435! \u0427\u0442\u043E\u0431\u044B \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C, \u043F\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u043F\u043E \u044D\u0442\u043E\u0439 \u0441\u0441\u044B\u043B\u043A\u0435: %s
 
-comment_notification.subject=BSUIRHUB | Comment notification
-comment_notification.body=Hello! A new comment has arrived under one of your grades.<br/>Follow this link to view it: %s
+comment_notification.subject=BSUIRHUB | \u0423\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0435 \u043E \u043D\u043E\u0432\u043E\u043C \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
+comment_notification.body=\u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439\u0442\u0435! \u041F\u043E\u0434 \u043E\u0434\u043D\u0438\u043C \u0438\u0437 \u0432\u0430\u0448\u0438\u0445 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0435\u0432 \u043F\u043E\u044F\u0432\u0438\u043B\u0441\u044F \u043D\u043E\u0432\u044B\u0439 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439.<br/>\u0412\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u043F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0435\u0433\u043E, \u043F\u0435\u0440\u0435\u0439\u0434\u044F \u043F\u043E \u044D\u0442\u043E\u0439 \u0441\u0441\u044B\u043B\u043A\u0435: %s
