jsp partially internationalized

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -121,6 +121,9 @@ faculty.faculty_name_validation=Faculty name must have 1 - 50 alphabetic and whi
 faculty.faculty_short_name_validation=Faculty short name must have 1 - 15 alphabetic characters
 
 group.name=Name
+group.department=Department
+group.headman=Headman
+group.curator=Curator
 group.new_group=New group
 group.edit_group=Edit group
 group.group_updated=Group successfully updated
@@ -140,6 +143,37 @@ subject.edit_subject=Edit subject
 subject.subject_updated=Subject successfully updated
 subject.subject_name_validation=Subject name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
 subject.subject_short_name_validation=Subject short name must have 1 - 15 alphabetic characters
+
+user.login=Login
+user.email=Email
+user.role=Role
+user.status=Status
+user.first_name=First name
+user.patronymic=Patronymic
+user.last_name=Last name
+user.new_user=New user
+user.edit_user=Edit user
+user.change_profile_image=Change profile image
+user.user_updated=User successfully updated
+user.not_unique_login=Not unique login
+user.not_unique_email=Not unique email
+user.login_validation=Login must contain 8 - 20 alphanumeric characters
+user.email_validation=Invalid email
+user.password=Password
+user.password_validation=Password must contain 8 - 32 alphanumeric characters (letters and digits are required both)
+user.confirm_password=Confirm password
+user.passwords_do_not_match=Passwords do not match
+user.group=Group
+user.first_name_validation=First name must have 1 - 50 alphabetic characters
+user.patronymic_validation=Patronymic must have 1 - 50 alphabetic characters
+user.last_name_validation=Last name must have 1 - 50 alphabetic characters
+user.confirmed=Confirmed
+user.email_placeholder=Leave it empty if you do not want set email (WARNING: user will be considered as not confirmed)
+user.password_placeholder=Leave it empty if you do not want to change password
+
+role.student=Student
+role.teacher=Teacher
+role.admin=Admin
 
 error.page_not_found_title=Page not found
 error.page_not_found_detail=we are sorry, but the page you requested was not found
