ru/en internationalization

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -60,7 +60,7 @@ reset.send_reset_link=Send reset link
 reset.invalid_email=Invalid email
 
 dashboard.student=Student dashboard
-dashboard,average_grade=Average grade
+dashboard.average_grade=Average grade
 dashboard.faculty=Faculty
 dashboard.department=Department
 dashboard.specialty=Specialty
@@ -72,6 +72,8 @@ dashboard.teacher=Teacher dashboard
 dashboard.your_subjects=Your subjects
 dashboard.groups=Groups
 dashboard.students=Students
+dashboard.students_of_group=Students of group
+
 
 grades.grades_overview=Grades overview
 grades.average_subject_grade=Average subject grade
@@ -81,6 +83,11 @@ grades.grade=Grade
 grades.action=Action
 grades.comments=Comments
 grades.close=Close
+grades.new_grade=New grade
+grades.update=Update
+grades.delete=Delete
+grades.new_comment=New comment
+grades.comment_text=Comment text
 
 contact_us.contact_us=Contact us
 contact_us.message_sent=Message successfully send, we will contact you soon
@@ -100,6 +107,11 @@ admin.save=Save
 admin.settings=Settings
 admin.logout=Logout
 admin.action=Action
+admin.create=Create
+admin.search=Search
+admin.edit=Edit
+admin.delete=Delete
+admin.search_criteria=Search criteria
 
 department.name=Name
 department.short_name=Short name
@@ -135,6 +147,8 @@ group.notification=Notification
 group.assignment_created=Assignment successfully created
 group.assignment_updated=Assignment successfully updated
 group.assignment_deleted=Assignment successfully deleted
+group.choose_subject=Choose subject
+group.choose_teacher=Choose teacher
 
 subject.name=Name
 subject.short_name=Short name
@@ -168,6 +182,7 @@ user.first_name_validation=First name must have 1 - 50 alphabetic characters
 user.patronymic_validation=Patronymic must have 1 - 50 alphabetic characters
 user.last_name_validation=Last name must have 1 - 50 alphabetic characters
 user.confirmed=Confirmed
+user.not_confirmed=Not confirmed
 user.email_placeholder=Leave it empty if you do not want set email (WARNING: user will be considered as not confirmed)
 user.password_placeholder=Leave it empty if you do not want to change password
 
