--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -185,6 +185,9 @@ user.confirmed=Confirmed
 user.not_confirmed=Not confirmed
 user.email_placeholder=Leave it empty if you do not want set email (WARNING: user will be considered as not confirmed)
 user.password_placeholder=Leave it empty if you do not want to change password
+user.clear_all_grades=Clear all grades
+user.confirm_clear=You are going to delete all grades and associated comments. Are you sure?
+user.clear_success=All grades and comments are successfully cleared!
 
 role.student=Student
 role.teacher=Teacher
