--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -120,16 +120,16 @@ department.faculty=Faculty
 department.new_department=New department
 department.edit_department=Edit department
 department.department_updated=Department successfully updated
-department.department_name_validation=Department name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+department.department_name_validation=Department name must have 1 - 50 alphabetic and whitespace (except for trailing and leading), commas, dots and hyphen characters
 department.department_short_name_validation=Department short name must have 1 - 15 alphabetic characters
-department.department_specialty_validation=Department specialty alias must have 1 - 100 alphabetic and whitespace (except for trailing and leading) characters
+department.department_specialty_validation=Department specialty alias must have 1 - 100 alphabetic and whitespace (except for trailing and leading), commas, dots and hyphen characters
 
 faculty.name=Name
 faculty.short_name=Short name
 faculty.new_faculty=New faculty
 faculty.edit_faculty=Edit faculty
 faculty.faculty_updated=Faculty successfully updated
-faculty.faculty_name_validation=Faculty name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+faculty.faculty_name_validation=Faculty name must have 1 - 50 alphabetic and whitespace (except for trailing and leading), commas, dots and hyphen characters
 faculty.faculty_short_name_validation=Faculty short name must have 1 - 15 alphabetic characters
 
 group.name=Name
@@ -155,7 +155,7 @@ subject.short_name=Short name
 subject.new_subject=New subject
 subject.edit_subject=Edit subject
 subject.subject_updated=Subject successfully updated
-subject.subject_name_validation=Subject name must have 1 - 50 alphabetic and whitespace (except for trailing and leading) characters
+subject.subject_name_validation=Subject name must have 1 - 50 alphabetic and whitespace (except for trailing and leading), commas, dots and hyphen characters
 subject.subject_short_name_validation=Subject short name must have 1 - 15 alphabetic characters
 
 user.login=Login
