--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -4,7 +4,7 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 
 username=archbucket.index@gmail.com
-password=DiMa75097110q
+password=
 thread_pool_size=2
 support=dzmitriy20magic@gmail.com
 
