--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/bsuirhub
+url=jdbc:mysql://db:3306/bsuirhub
 user=jdbc
 password=dwf465af74fvfg
 autoReconnect=true
