added user actions logging into db

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
     </filter-mapping>
 
     <filter-mapping>
+        <filter-name>AuditFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
         <filter-name>LoginAccessFilter</filter-name>
         <url-pattern>/login/*</url-pattern>
     </filter-mapping>
