--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '2.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
